alignment of products on homepage is fixed

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -3129,3 +3129,10 @@ b {
     vertical-align: middle;
 }
 
+.recWine {
+    height: 120px;
+}
+.recWineName {
+    height: 32px;
+}
+
